# KaiGE

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  VISION.md
.github/workflows/: devskim.yml
crates/kaige_ecs/: Cargo.toml  README.md  readme.md
crates/kaige_ecs/codegen/: Cargo.toml  README.md
crates/kaige_ecs/codegen/src/: lib.rs
crates/kaige_ecs/src/: lib.rs
crates/kaige_renderer/: Cargo.toml  README.md
crates/kaige_renderer/src/: lib.rs  main.rs  shader.wgsl
crates/kaige_window/: Cargo.toml
crates/kaige_window/src/: lib.rs
crates/kair-ecs/: Cargo.toml
crates/kair-ecs/src/: lib.rs
kaige-testing/: Cargo.toml
kaige-testing/src/: main.rs
src/: custom_errors.rs  lib.rs
tests/: app_tests.rs
