[package]
name = "kaige"
version = "0.0.1"
edition = "2021"
readme = "README.md"
authors = ["Kaige Organization <tylerdarincritchlow@gmail.com>"]
description = "A game engine written in Rust"
license-file = "LICENSE"
repository = "https://github.com/KaiGE-Organization/kaige"
homepage = "https://kaige.rs"
documentation = "https://kaige.rs/docs"
keywords = ["game", "engine", "rust", "kaige"]
categories = ["game-engines", "game-development", "rust"]
exclude = ["target", "crates/kaige_ecs/target", "crates/kaige_window/target", "crates/kaige_window/kaige_window/target"]




# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kaige_ecs = {version = "0.4.0"}
kaige_renderer = {version = "0.0.1"}
# kaige_window = {version = "*"}
thiserror = "1.0.50"
