[package]
name = "kaige_ecs"
version = "0.1.0"
edition = "2021"
readme = "README.md"
keywords = ["ecs", "entity", "component", "game"]
categories = ["game-engines", "game-development", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
