[package]
name = "kaige_ecs"
version = "0.4.0"
description = "Fork of the Legion ECS library, with some changes to make it more suitable for use in Kaige."
authors = ["Kaige Organization <tylerdarincritchlow@gmail.com"]
repository = "https://github.com/KaiGE-Organization/kaige_ecs"
keywords = ["ecs", "game"]
categories = ["game-engines", "data-structures"]
readme = "README.md"
license-file = "LICENSE"
edition = "2021"

[features]
default = ["parallel", "serialize", "crossbeam-events", "codegen"]
parallel = ["rayon"]
extended-tuple-impls = []
serialize = ["serde", "erased-serde", "uuid", "uuid/serde", "scoped-tls-hkt"]
crossbeam-events = ["crossbeam-channel"]
codegen = ["kaige_codegen"]
stdweb = ["uuid/stdweb"]
wasm-bindgen = ["uuid/wasm-bindgen"]
reexport = ["kaige_codegen", "kaige_codegen/reexport"]
no-reexport = ["kaige_codegen/no-reexport"]

[dependencies]
kaige_codegen = { version = "0.4.0", optional = true }
smallvec = "1.4"
itertools = "0.10"
downcast-rs = "1.2"
paste = "1.0.0"
parking_lot = "0.11"
bit-set = "0.5"
thiserror = "1.0"
uuid = { version = "0.8", features = ["v4"], optional = true }
rayon = { version = "1.4", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
scoped-tls-hkt = { version = "0.1", optional = true }
erased-serde = { version = "0.3", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
atomic_refcell = "0.1.6"

[dev-dependencies]
serde_json = "1.0"
bincode = "1.3"
criterion = "0.3"
cgmath = "0.18"
trybuild = "1.0"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "parallel_query"
harness = false
required-features = ["parallel"]

[[bench]]
name = "transform"
harness = false
required-features = ["parallel"]

[[bench]]
name = "insertion"
harness = false

[[test]]
name = "codegen"
required-features = ["codegen"]

[[test]]
name = "systems_par_for_each"
required-features = ["parallel"]
