[package]
name = "kaige_renderer"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/KaiGE-Organization/kaige_renderer"
description = "2D and 3D renderer made for KaiGE, but is usable in other cases."
readme = "README.md"
authors = ["Kaige Organization <tylerdarincritchlow@gmail.com>"]
license-file = "LICENSE"
homepage = "https://kaige.rs/renderer"
documentation = "https://kaige.rs/docs"
keywords = ["game", "engine", "rust", "kaige"]
categories = ["game-engines", "game-development", "rust"]
exclude = ["target"]


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
image = "0.23"
cgmath = "0.18"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
wgpu = "0.18"
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.18", features = ["webgl"]}
wasm-bindgen = "=0.2.87"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.53", features = [
    "Document",
    "Window",
    "Element",
]}
 

 