[package]
name = "kaige_codegen"
version = "0.4.0"
description = "#[system] proc macro for the kaige_ecs library"
authors = ["Kaige Organization <tylerdarincritchlow@gmail.com>"]
repository = "https://github.com/KaiGE-Organization/kaige_ecs"
keywords = ["ecs", "game"]
categories = ["game-engines", "data-structures"]
readme = "README.md"
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"
thiserror = "1.0"

[features]
default = []
reexport = []
no-reexport = []
